// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalBanner matches snapshot (desktop, alert) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c4 {
  display: inline;
  font-weight: var(--font-semi-bold);
  margin-right: var(--spacing-1x);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CD2C23;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: var(--spacing-1x) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c1 > svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0 var(--spacing-1x) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1x);
}

.c2 {
  -webkit-align-self: initial;
  -ms-flex-item-align: initial;
  align-self: initial;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #F99D99;
  color: #F99D99;
}

.c9:focus {
  background-color: #CD2C23;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: unset;
}

.c6 > button {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="alert"
      class="c2"
      color="currentColor"
      height="16"
      role="img"
      width="16"
    />
    <span
      class="c3"
    >
      <strong
        class="c4"
      >
        alert
      </strong>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (desktop, default) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
}

.c4 {
  display: inline;
  font-weight: var(--font-semi-bold);
  margin-right: var(--spacing-1x);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #60666E;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: var(--spacing-1x) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c1 > svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0 var(--spacing-1x) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1x);
}

.c2 {
  -webkit-align-self: initial;
  -ms-flex-item-align: initial;
  align-self: initial;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c9:focus {
  background-color: #60666E;
}

.c11:focus {
  background-color: #60666E;
}

.c11:hover {
  background-color: #878F9A;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: unset;
}

.c6 > button {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="default"
      class="c2"
      color="currentColor"
      height="16"
      role="img"
      width="16"
    />
    <span
      class="c3"
    >
      <strong
        class="c4"
      >
        default
      </strong>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (desktop, info) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
}

.c4 {
  display: inline;
  font-weight: var(--font-semi-bold);
  margin-right: var(--spacing-1x);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #006296;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: var(--spacing-1x) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c1 > svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0 var(--spacing-1x) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1x);
}

.c2 {
  -webkit-align-self: initial;
  -ms-flex-item-align: initial;
  align-self: initial;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #8FCEF0;
  color: #8FCEF0;
}

.c9:focus {
  background-color: #006296;
}

.c11:focus {
  background-color: #006296;
}

.c11:hover {
  background-color: #003A5A;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: unset;
}

.c6 > button {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="info"
      class="c2"
      color="currentColor"
      height="16"
      role="img"
      width="16"
    />
    <span
      class="c3"
    >
      <strong
        class="c4"
      >
        info
      </strong>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (desktop, warning) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
}

.c4 {
  display: inline;
  font-weight: var(--font-semi-bold);
  margin-right: var(--spacing-1x);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F5A200;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row rap;
  -ms-flex-flow: row rap;
  flex-flow: row rap;
  font-size: 0.875rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  line-height: 1.5rem;
  padding: var(--spacing-1x) var(--spacing-2x);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c1 > svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1x);
  margin: 0 var(--spacing-1x) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1x);
}

.c2 {
  -webkit-align-self: initial;
  -ms-flex-item-align: initial;
  align-self: initial;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9 {
  border-color: #000000;
  color: #000000;
}

.c9:hover {
  border-color: #9E6900;
  color: #9E6900;
}

.c9:focus {
  background-color: #F5A200;
  color: #000000;
}

.c11 {
  color: #000000;
}

.c11:focus {
  background-color: #F5A200;
  color: #000000;
}

.c11:hover {
  background-color: #9E6900;
  color: #FFFFFF;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: unset;
}

.c6 > button {
  margin-left: var(--spacing-1x);
  margin-top: 0;
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="warning"
      class="c2"
      color="currentColor"
      height="16"
      role="img"
      width="16"
    />
    <span
      class="c3"
    >
      <strong
        class="c4"
      >
        warning
      </strong>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, alert) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 > svg {
  color: inherit;
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c4 {
  display: block;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #CD2C23;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c1 > svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1halfx);
  margin: 0 var(--spacing-1x) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1halfx);
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #F99D99;
  color: #F99D99;
}

.c9:focus {
  background-color: #CD2C23;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 > button {
  margin-left: 0;
  margin-top: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="alert"
      class="c2"
      color="currentColor"
      height="24"
      role="img"
      width="24"
    />
    <span
      class="c3"
    >
      <strong
        class="c4"
      >
        alert
      </strong>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, default) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 > svg {
  color: inherit;
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
}

.c4 {
  display: block;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #60666E;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c1 > svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1halfx);
  margin: 0 var(--spacing-1x) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1halfx);
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c9:focus {
  background-color: #60666E;
}

.c11:focus {
  background-color: #60666E;
}

.c11:hover {
  background-color: #878F9A;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 > button {
  margin-left: 0;
  margin-top: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="default"
      class="c2"
      color="currentColor"
      height="24"
      role="img"
      width="24"
    />
    <span
      class="c3"
    >
      <strong
        class="c4"
      >
        default
      </strong>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, info) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 > svg {
  color: inherit;
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
}

.c4 {
  display: block;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #006296;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c1 > svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1halfx);
  margin: 0 var(--spacing-1x) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1halfx);
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9:hover {
  border-color: #8FCEF0;
  color: #8FCEF0;
}

.c9:focus {
  background-color: #006296;
}

.c11:focus {
  background-color: #006296;
}

.c11:hover {
  background-color: #003A5A;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 > button {
  margin-left: 0;
  margin-top: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="info"
      class="c2"
      color="currentColor"
      height="24"
      role="img"
      width="24"
    />
    <span
      class="c3"
    >
      <strong
        class="c4"
      >
        info
      </strong>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;

exports[`GlobalBanner matches snapshot (mobile, warning) 1`] = `
.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.033125rem;
  -moz-letter-spacing: 0.033125rem;
  -ms-letter-spacing: 0.033125rem;
  letter-spacing: 0.033125rem;
  line-height: 1.5rem;
  min-height: var(--size-3x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c7:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c7:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #84C6EA;
  outline-offset: -2px;
}

.c7 > svg {
  color: inherit;
  height: var(--size-1halfx);
  width: var(--size-1halfx);
}

.c8 {
  background-color: transparent;
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c8:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c8:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c8:hover,
.c8[aria-expanded='true'] {
  background-color: transparent;
  border-color: #84C6EA;
  color: #84C6EA;
}

.c8:disabled {
  background-color: transparent;
  border-color: #006296;
  color: #006296;
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:not(:focus) {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: none;
  outline: 2px solid transparent;
  outline-offset: -2px;
}

.c10:focus {
  -webkit-transition: all .25s ease-in-out;
  transition: all .25s ease-in-out;
  box-shadow: 0 0 0 2px #84C6EA;
  outline: 2px solid #006296;
  outline-offset: -2px;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #003A5A;
  border-color: transparent;
  color: #FFFFFF;
}

.c10:disabled {
  background-color: transparent;
  border-color: transparent;
  color: #006296;
}

.c4 {
  display: block;
  font-weight: var(--font-semi-bold);
  margin-bottom: var(--spacing-half);
}

.c5 {
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F5A200;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  font-size: 1rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  padding: var(--spacing-1halfx);
  position: relative;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: unset;
  -webkit-justify-content: unset;
  -ms-flex-pack: unset;
  justify-content: unset;
  padding-left: var(--spacing-4x);
  position: relative;
}

.c1 > svg {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-1halfx);
  margin: 0 var(--spacing-1x) 0 calc(-1 * var(--spacing-4x));
  width: var(--size-1halfx);
}

.c2 {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c3 {
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  margin: 0;
}

.c9 {
  border-color: #000000;
  color: #000000;
}

.c9:hover {
  border-color: #9E6900;
  color: #9E6900;
}

.c9:focus {
  background-color: #F5A200;
  color: #000000;
}

.c11 {
  color: #000000;
}

.c11:focus {
  background-color: #F5A200;
  color: #000000;
}

.c11:hover {
  background-color: #9E6900;
  color: #FFFFFF;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 > button {
  margin-left: 0;
  margin-top: var(--spacing-1x);
}

<section
  aria-atomic="true"
  aria-live="polite"
  class="c0"
  data-testid="container"
  role="status"
>
  <div
    class="c1"
  >
    <svg
      aria-label="warning"
      class="c2"
      color="currentColor"
      height="24"
      role="img"
      width="24"
    />
    <span
      class="c3"
    >
      <strong
        class="c4"
      >
        warning
      </strong>
      <span
        class="c5"
      >
        Test content
      </span>
    </span>
  </div>
  <div
    class="c6"
  >
    <button
      class="c7 c8 c9"
      data-testid="action-button"
      type="button"
    >
      Test button
    </button>
    <button
      class="c7 c10 c11"
      data-testid="dismiss-button"
      type="button"
    >
      Ignore
    </button>
  </div>
</section>
`;
